# reverie

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data-gen/: Cargo.toml
data-gen/src/: main.rs
docs/: DESIGN.md  paper.md
reverie/: __init__.py  data.py  latent.py  model.py  train.py
scripts/: ablation_table.py  matrix.py  phase0.sh  phase0_deep.sh  report.py  run.py
tests/: test_core.py
