[project]
name = "reverie"
version = "0.1.0"
description = "Adaptive, curriculum-free reasoning in continuous latent space — a successor to Coconut, in JAX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.34",
    "equinox>=0.11.7",
    "optax>=0.2.3",
    "jaxtyping>=0.2.34",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.5"]

[project.urls]
Repository = "https://github.com/teddytennant/reverie"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reverie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
